# nucleus-portal-v2

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  README.md  SESSION-CONTEXT.md  ecosystem.config.js  package.json  pnpm-lock.yaml
.claude/: launch.json  port-9090-status.md  settings.local.json
agent/: CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile.cross  Dockerfile.mbusd  agent.example.toml  mbusd-arm
agent/build-context/: Dockerfile  Dockerfile.public  mbusd  nucleus-agent
agent/nucleus-agent/: Cargo.toml
agent/nucleus-agent/src/: arp_discovery.rs  chisel.rs  comms.rs  config.rs  connection.rs  health.rs  main.rs  mbusd.rs  rathole.rs  scanner.rs  tunnel.rs
agent/nucleus-common/: Cargo.toml
agent/nucleus-common/src/: messages.rs  types.rs
docs/: PLAN-rathole-transport.md
helper/: Cargo.toml
helper/nucleus-helper/: Cargo.toml
helper/nucleus-helper/src/: config.rs  main.rs  tunnel.rs
infra/: docker-compose.yml
infra/chisel/: .auth
infra/db/: 002-production-hardening.sql  init.sql
infra/docker/: Dockerfile.agent  Dockerfile.agent-patch  Dockerfile.backend  Dockerfile.frontend
infra/rathole/: .gitignore  server.toml  setup-firewall.ps1  start-server.sh
scripts/: build-agent-docker.sh  build-agent-v2.sh  build-agent-v25.sh  build-agent-v26.sh  build-agent-v27.sh  build-agent.sh  claude-project-instructions.md  dev.sh  install-agent-v2.sh  install-agent-vr24.sh  install-agent.sh  install-rathole-server.sh  new-session-prompt.md  open-agents.ps1  patch-mbusd.sh  session-context.md  setup.sh  startup.bat  sync-obsidian.sh
(+4 files in other folders)
