[package]
name = "nucleus-agent"
version.workspace = true
edition.workspace = true

[dependencies]
nucleus-common = { path = "../nucleus-common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pki-types = "1"
webpki-roots = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
base64 = "0.22"
sysinfo = "0.31"
