[package]
name = "nucleus-helper"
version.workspace = true
edition.workspace = true

[dependencies]
nucleus-common = { path = "../../agent/nucleus-common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
